added owner photo and other team member and changed portfolia photo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
-          <h2>Leading Supplier of Tyre in <span>Nepal</span></h2>
+          <h2>Leading Supplier of Tyre, Lube and machinery in <span>Nepal</span></h2>
           <p>Welcome to OmTraders, we are a premier mobile tire installation, repair, and tire maintenance service in Kathmandu area, we bring the tire shop to you! Do you know it is time for new tires but have been putting it off? Who has time to bring their vehicle into a tire shop with a busy schedule? Sit back & relax! We are Coming to You for a Change!</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#services" class="btn-get-started">Get Started</a>
@@ -219,7 +219,6 @@
 
         <div class="section-header">
           <h2>Portfolio</h2>
-          <p>Quam sed id excepturi ccusantium dolorem ut quis dolores nisi llum nostrum enim velit qui ut et autem uia reprehenderit sunt deleniti</p>
         </div>
 
         <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order" data-aos="fade-up" data-aos-delay="100">
@@ -236,7 +235,7 @@
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-tyres">
               <div class="portfolio-wrap">
-                <a href="assets/img/portfolio/all-season-tires-min.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/all-season-tires-min.png" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/mrf-bmw.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/mrf-bmw.png" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="" title="More Details">All Season Tires</a></h4>
                 </div>
@@ -246,7 +245,7 @@
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-tyres">
               <div class="portfolio-wrap">
-                <a href="assets/img/portfolio/Highway-tires.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/Highway-tires.png" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/mrf-3.jpeg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/mrf-3.jpeg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="" title="More Details">Highway Tires</a></h4>
                 </div>
@@ -255,7 +254,7 @@
 
             <div class="col-xl-4 col-md-6 portfolio-item filter-tyres">
               <div class="portfolio-wrap">
-                <a href="assets/img/portfolio/winter-tires.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/winter-tires.png" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/tyre-2.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/tyre-2.png" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="" title="More Details">Winter Tires</a></h4>
                 </div>
@@ -263,7 +262,7 @@
             </div><!-- End Portfolio Item -->
             <div class="col-xl-4 col-md-6 portfolio-item filter-mobil">
               <div class="portfolio-wrap">
-                <a href="assets/img/portfolio/mobil-delvac-engine-oils-grouping-fs-sm.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/mobil-delvac-engine-oils-grouping-fs-sm.jpg" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/mobil-01.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/mobil-01.png" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="" title="More Details">Mobil Delvac™</a></h4>
                 </div>
@@ -271,7 +270,7 @@
             </div><!-- End Portfolio Item -->
             <div class="col-xl-4 col-md-6 portfolio-item filter-mobil">
               <div class="portfolio-wrap">
-                <a href="assets/img/portfolio/mobil-1-motor-oils-2020-fs-sm.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/mobil-1-motor-oils-2020-fs-sm.png" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/mobil-02.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/mobil-02.png" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="" title="More Details">Mobil 1™</a></h4>
                 </div>
@@ -279,7 +278,7 @@
             </div><!-- End Portfolio Item -->
             <div class="col-xl-4 col-md-6 portfolio-item filter-mobil">
               <div class="portfolio-wrap">
-                <a href="assets/img/portfolio/mobil-super-grouping-2020-fs-sm.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/mobil-super-grouping-2020-fs-sm.jpg" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/mobil-03.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/mobil-03.png" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="" title="More Details">Mobil Super™ motor oil</a></h4>
                 </div>
@@ -302,11 +301,24 @@
         </div>
 
         <div class="row gy-4">
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
+            <div class="member">
+              <img src="assets/img/team/owner.jpeg" class="img-fluid" alt="">
+              <h4>Nikesh Dhungel</h4>
+              <span>Owner</span>
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/team/team-01.jpeg" class="img-fluid" alt="">
-              <h4>Mr. Unknown</h4>
+              <h4>Prajwal Poudyal</h4>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -319,7 +331,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/img/team/team-02.jpeg" class="img-fluid" alt="">
-              <h4>Mr. Unknown</h4>
+              <h4>Anup Chaudhary</h4>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -332,7 +344,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <img src="assets/img/team/team-03.jpeg" class="img-fluid" alt="">
-              <h4>Mr. Unknown</h4>
+              <h4>Suman Raj Dhungel</h4>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -342,18 +354,7 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="member">
-              <img src="assets/img/team/team-04.jpeg" class="img-fluid" alt="">
-              <h4>Mr. Unknown</h4>
-              <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
+          
 
         </div>
 
