added lazy loading of images

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2">
-          <img src="assets/img/hero-img.svg" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="100">
+          <img src="assets/img/hero-img.svg" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="100" loading="lazy">
         </div>
       </div>
     </div>
@@ -303,7 +303,7 @@
         <div class="row gy-4">
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
-              <img src="assets/img/team/owner.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team/owner.jpeg" class="img-fluid" alt="" loading="lazy">
               <h4>Nikesh Dhungel</h4>
               <span>Owner</span>
               <div class="social">
@@ -317,7 +317,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/team-01.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-01.jpeg" class="img-fluid" alt="" loading="lazy">
               <h4>Prajwal Poudyal</h4>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -330,7 +330,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/team/team-02.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-02.jpeg" class="img-fluid" alt="" loading="lazy">
               <h4>Anup Chaudhary</h4>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -343,7 +343,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <img src="assets/img/team/team-03.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-03.jpeg" class="img-fluid" alt="" loading="lazy">
               <h4>Suman Raj Dhungel</h4>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
