location and office time changes

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h4>Location:</h4>
-                  <p>Somewhere Kathmandu, Nepal</p>
+                  <p>Hariwon Sarlahi, Nepal</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -402,7 +402,7 @@
                 <i class="bi bi-clock flex-shrink-0"></i>
                 <div>
                   <h4>Open Hours:</h4>
-                  <p>Sun-Fri: 10AM - 15PM</p>
+                  <p>Sun-Fri: 10AM - 17PM</p>
                 </div>
               </div><!-- End Info Item -->
             </div>
@@ -480,8 +480,8 @@
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>
-            Some XXXXXXXX Street <br>
-            Kathmandu<br>
+            Hariwon <br>
+            Sarlahi,<br>
             Nepal <br><br>
             <strong>Phone:</strong> +9779852639848<br>
             <strong>Email:</strong> nikeshdhungel48@gmail.com<br>
