added new product

--- a/index.html
+++ b/index.html
@@ -284,6 +284,14 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
+            <div class="col-xl-4 col-md-6 portfolio-item filter-mobil">
+              <div class="portfolio-wrap">
+                <a href="assets/img/portfolio/Petronas.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/Petronas.png" class="img-fluid" alt=""></a>
+                <div class="portfolio-info">
+                  <h4><a href="" title="More Details">Petronas Mobil</a></h4>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
           </div><!-- End Portfolio Container -->
 
